Add references related to mathbio

--- a/All.bib
+++ b/All.bib
@@ -4000,6 +4000,20 @@
   url		= {https://doi.org/10.4310/CIS.2021.v21.n2.a2}
 }
 
+@Article{	  barton.etheridge.ea:10:new,
+  author	= {Barton, N. H. and Etheridge, A. M. and V\'{e}ber, A.},
+  title		= {A new model for evolution in a spatial continuum},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {15},
+  year		= {2010},
+  pages		= {no. 7, 162--216},
+  mrclass	= {60J25 (60G55 60J75 92D15 92D25)},
+  mrnumber	= {2594876},
+  doi		= {10.1214/EJP.v15-741},
+  url		= {https://doi.org/10.1214/EJP.v15-741}
+}
+
 @Article{	  basor.tracy.ea:92:asymptotics,
   author	= {Basor, Estelle L. and Tracy, Craig A. and Widom, Harold},
   title		= {Asymptotics of level-spacing distributions for random
@@ -18141,6 +18155,22 @@
   mrreviewer	= {Mireia Besal\'{u}},
   doi		= {10.1016/j.spa.2015.06.001},
   url		= {https://doi.org/10.1016/j.spa.2015.06.001}
+}
+
+@Article{	  etheridge.veber.ea:20:rescaling,
+  author	= {Etheridge, Alison M. and V\'{e}ber, Amandine and Yu, Feng},
+  title		= {Rescaling limits of the spatial lambda-{F}leming-{V}iot
+		  process with selection},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {25},
+  year		= {2020},
+  pages		= {Paper No. 120, 89},
+  mrclass	= {60G57 (60G52 60J25 92D10)},
+  mrnumber	= {4161130},
+  mrreviewer	= {Yu-Ting Chen},
+  doi		= {10.1214/20-ejp523},
+  url		= {https://doi.org/10.1214/20-ejp523}
 }
 
 @Book{		  etheridge:00:introduction,
@@ -42777,6 +42807,24 @@
   url		= {https://doi.org/10.1214/10-AOP537}
 }
 
+@Article{	  pfaffelhuber.popovic:15:scaling,
+  author	= {Pfaffelhuber, Peter and Popovic, Lea},
+  title		= {Scaling limits of spatial compartment models for chemical
+		  reaction networks},
+  journal	= {Ann. Appl. Probab.},
+  fjournal	= {The Annals of Applied Probability},
+  volume	= {25},
+  year		= {2015},
+  number	= {6},
+  pages		= {3162--3208},
+  issn		= {1050-5164},
+  mrclass	= {60J27 (60F17 60J25 80A30 92C45)},
+  mrnumber	= {3404634},
+  mrreviewer	= {Ross S. McVinish},
+  doi		= {10.1214/14-AAP1070},
+  url		= {https://doi.org/10.1214/14-AAP1070}
+}
+
 @Article{	  phillips:87:existence,
   author	= {Phillips, Daniel},
   title		= {Existence of solutions of quenching problems},
@@ -43042,6 +43090,16 @@
   isbn		= {1-58488-299-9},
   mrclass	= {35-00 (00A06 35-01)},
   mrnumber	= {1935578}
+}
+
+@Article{	  popovic.veber:20:spatial,
+  title		= {A spatial measure-valued model for chemical reaction
+		  networks in heterogeneous systems},
+  author	= {Lea Popovic and Amandine Veber},
+  year		= {2020},
+  month		= {August},
+  journal	= {preprint arXiv:2008.12373},
+  url		= {http://arXiv.org/abs/2008.12373}
 }
 
 @Article{	  pospisil.tribe:07:parameter,
@@ -51728,6 +51786,22 @@
   mrnumber	= {1692868},
   doi		= {10.1080/17442509908834197},
   url		= {https://doi.org/10.1080/17442509908834197}
+}
+
+@Article{	  zakai:69:on,
+  author	= {Zakai, Moshe},
+  title		= {On the optimal filtering of diffusion processes},
+  journal	= {Z. Wahrscheinlichkeitstheorie und Verw. Gebiete},
+  fjournal	= {Zeitschrift f\"{u}r Wahrscheinlichkeitstheorie und
+		  Verwandte Gebiete},
+  volume	= {11},
+  year		= {1969},
+  pages		= {230--243},
+  mrclass	= {93.60 (60.00)},
+  mrnumber	= {242552},
+  mrreviewer	= {R. S. Bucy},
+  doi		= {10.1007/BF00536382},
+  url		= {https://doi.org/10.1007/BF00536382}
 }
 
 @Proceedings{	  zakharov:91:wave,
