Change an incollection to article

--- a/All.bib
+++ b/All.bib
@@ -16123,7 +16123,7 @@
   url		= {https://doi.org/10.1214/009117904000000531}
 }
 
-@InCollection{	  doering.mueller.ea:03:interacting,
+@Article{	  doering.mueller.ea:03:interacting,
   author	= {Doering, Charles R. and Mueller, Carl and Smereka, Peter},
   title		= {Interacting particles, the stochastic
 		  {F}isher-{K}olmogorov-{P}etrovsky-{P}iscounov equation, and
