--- a/All.bib
+++ b/All.bib
@@ -6387,7 +6387,19 @@
   url		= {https://doi.org/10.1007/s11040-021-09380-8}
 }
 
-@Article{	  borodin.corwin:14:macdonald,
+@InCollection{	  borodin.corwin:14:macdonald,
+  author	= {Borodin, A. and Corwin, I.},
+  title		= {Macdonald processes},
+  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
+		  {P}hysics},
+  pages		= {292--316},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2014},
+  mrclass	= {60K35 (60B99 82B23 82C22)},
+  mrnumber	= {3204480}
+}
+
+@Article{	  borodin.corwin:14:macdonald*1,
   author	= {Borodin, Alexei and Corwin, Ivan},
   title		= {Macdonald processes},
   journal	= {Probab. Theory Related Fields},
@@ -6402,18 +6414,6 @@
   mrreviewer	= {Rongfeng Sun},
   doi		= {10.1007/s00440-013-0482-3},
   url		= {https://doi.org/10.1007/s00440-013-0482-3}
-}
-
-@InCollection{	  borodin.corwin:14:macdonald*1,
-  author	= {Borodin, A. and Corwin, I.},
-  title		= {Macdonald processes},
-  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
-		  {P}hysics},
-  pages		= {292--316},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2014},
-  mrclass	= {60K35 (60B99 82B23 82C22)},
-  mrnumber	= {3204480}
 }
 
 @Article{	  borodin.corwin:14:moments,
@@ -7770,7 +7770,22 @@
   url		= {https://doi.org/10.2307/2154895}
 }
 
-@Article{	  cairoli.dalang:95:optimal,
+@InCollection{	  cairoli.dalang:95:optimal,
+  author	= {Cairoli, R. and Dalang, Robert C.},
+  title		= {Optimal switching between two {B}rownian motions},
+  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
+  series	= {Proc. Sympos. Pure Math.},
+  volume	= {57},
+  pages		= {53--63},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1995},
+  mrclass	= {60G40 (60J65)},
+  mrnumber	= {1335462},
+  doi		= {10.1090/pspum/057/1335462},
+  url		= {https://doi.org/10.1090/pspum/057/1335462}
+}
+
+@Article{	  cairoli.dalang:95:optimal*1,
   author	= {Cairoli, R. and Dalang, Robert C.},
   title		= {Optimal switching between two random walks},
   journal	= {Ann. Probab.},
@@ -7784,21 +7799,6 @@
   mrnumber	= {1379177},
   mrreviewer	= {H.-J. Engelbert},
   url		= {http://links.jstor.org/sici?sici=0091-1798(199510)23:4<1982:OSBTRW>2.0.CO;2-P&origin=MSN}
-}
-
-@InCollection{	  cairoli.dalang:95:optimal*1,
-  author	= {Cairoli, R. and Dalang, Robert C.},
-  title		= {Optimal switching between two {B}rownian motions},
-  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
-  series	= {Proc. Sympos. Pure Math.},
-  volume	= {57},
-  pages		= {53--63},
-  publisher	= {Amer. Math. Soc., Providence, RI},
-  year		= {1995},
-  mrclass	= {60G40 (60J65)},
-  mrnumber	= {1335462},
-  doi		= {10.1090/pspum/057/1335462},
-  url		= {https://doi.org/10.1090/pspum/057/1335462}
 }
 
 @Book{		  cairoli.dalang:96:sequential,
@@ -8634,23 +8634,6 @@
 
 @Article{	  cerrai.debussche:19:large,
   author	= {Cerrai, Sandra and Debussche, Arnaud},
-  title		= {Large deviations for the dynamic {$\Phi^{2n}_d$} model},
-  journal	= {Appl. Math. Optim.},
-  fjournal	= {Applied Mathematics and Optimization},
-  volume	= {80},
-  year		= {2019},
-  number	= {1},
-  pages		= {81--102},
-  issn		= {0095-4616},
-  mrclass	= {35R60 (35B25 35K57)},
-  mrnumber	= {3978511},
-  mrreviewer	= {Jamil Abreu},
-  doi		= {10.1007/s00245-017-9459-4},
-  url		= {https://doi.org/10.1007/s00245-017-9459-4}
-}
-
-@Article{	  cerrai.debussche:19:large*1,
-  author	= {Cerrai, Sandra and Debussche, Arnaud},
   title		= {Large deviations for the two-dimensional stochastic
 		  {N}avier-{S}tokes equation with vanishing noise
 		  correlation},
@@ -8667,6 +8650,23 @@
   mrreviewer	= {Thomas Kelly Alberts},
   doi		= {10.1214/17-aihp881},
   url		= {https://doi.org/10.1214/17-aihp881}
+}
+
+@Article{	  cerrai.debussche:19:large*1,
+  author	= {Cerrai, Sandra and Debussche, Arnaud},
+  title		= {Large deviations for the dynamic {$\Phi^{2n}_d$} model},
+  journal	= {Appl. Math. Optim.},
+  fjournal	= {Applied Mathematics and Optimization},
+  volume	= {80},
+  year		= {2019},
+  number	= {1},
+  pages		= {81--102},
+  issn		= {0095-4616},
+  mrclass	= {35R60 (35B25 35K57)},
+  mrnumber	= {3978511},
+  mrreviewer	= {Jamil Abreu},
+  doi		= {10.1007/s00245-017-9459-4},
+  url		= {https://doi.org/10.1007/s00245-017-9459-4}
 }
 
 @Article{	  cerrai.freidlin.ea:17:on,
@@ -11556,17 +11556,6 @@
 }
 
 @InCollection{	  conus.joseph.ea:13:intermittency,
-  title		= {Intermittency and chaos for a nonlinear stochastic wave
-		  equation in dimension 1},
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
-		  and Shiu, Shang-Yuan},
-  booktitle	= {Malliavin calculus and stochastic analysis},
-  pages		= {251--279},
-  year		= {2013},
-  publisher	= {Springer}
-}
-
-@InCollection{	  conus.joseph.ea:13:intermittency*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {Intermittency and chaos for a nonlinear stochastic wave
@@ -11582,6 +11571,17 @@
   mrreviewer	= {Stefan Tappe},
   doi		= {10.1007/978-1-4614-5906-4\_11},
   url		= {https://doi.org/10.1007/978-1-4614-5906-4_11}
+}
+
+@InCollection{	  conus.joseph.ea:13:intermittency*1,
+  title		= {Intermittency and chaos for a nonlinear stochastic wave
+		  equation in dimension 1},
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
+		  and Shiu, Shang-Yuan},
+  booktitle	= {Malliavin calculus and stochastic analysis},
+  pages		= {251--279},
+  year		= {2013},
+  publisher	= {Springer}
 }
 
 @Article{	  conus.joseph.ea:13:on,
@@ -12493,6 +12493,22 @@
 }
 
 @Article{	  corwin:16:kardar-parisi-zhang,
+  author	= {Corwin, Ivan},
+  title		= {Kardar-{P}arisi-{Z}hang universality [reprint of
+		  {MR}3445162]},
+  journal	= {Eur. Math. Soc. Newsl.},
+  fjournal	= {European Mathematical Society. Newsletter},
+  number	= {101},
+  year		= {2016},
+  pages		= {19--27},
+  issn		= {1027-488X},
+  mrclass	= {82B23 (35K59 35R60 60H15 60K35)},
+  mrnumber	= {3526310},
+  doi		= {10.4171/news/101/6},
+  url		= {https://doi.org/10.4171/news/101/6}
+}
+
+@Article{	  corwin:16:kardar-parisi-zhang*1,
   author	= {Corwin, I.},
   title		= {Kardar-{P}arisi-{Z}hang universality},
   journal	= {Notices Amer. Math. Soc.},
@@ -12507,22 +12523,6 @@
   mrreviewer	= {Flora Koukiou},
   doi		= {10.1090/noti1334},
   url		= {https://doi.org/10.1090/noti1334}
-}
-
-@Article{	  corwin:16:kardar-parisi-zhang*1,
-  author	= {Corwin, Ivan},
-  title		= {Kardar-{P}arisi-{Z}hang universality [reprint of
-		  {MR}3445162]},
-  journal	= {Eur. Math. Soc. Newsl.},
-  fjournal	= {European Mathematical Society. Newsletter},
-  number	= {101},
-  year		= {2016},
-  pages		= {19--27},
-  issn		= {1027-488X},
-  mrclass	= {82B23 (35K59 35R60 60H15 60K35)},
-  mrnumber	= {3526310},
-  doi		= {10.4171/news/101/6},
-  url		= {https://doi.org/10.4171/news/101/6}
 }
 
 @Article{	  corwin:18:commentary,
@@ -13528,7 +13528,22 @@
   url		= {https://doi.org/10.1214/21-EJP589}
 }
 
-@Article{	  dalang.leveque:04:second-order,
+@InCollection{	  dalang.leveque:04:second-order,
+  author	= {Dalang, Robert C. and L\'{e}v\^{e}que, Olivier},
+  title		= {Second-order hyperbolic {S}.{P}.{D}.{E}.'s driven by
+		  boundary noises},
+  booktitle	= {Seminar on {S}tochastic {A}nalysis, {R}andom {F}ields and
+		  {A}pplications {IV}},
+  series	= {Progr. Probab.},
+  volume	= {58},
+  pages		= {83--93},
+  publisher	= {Birkh\"{a}user, Basel},
+  year		= {2004},
+  mrclass	= {60H15 (35L10 35R60)},
+  mrnumber	= {2096282}
+}
+
+@Article{	  dalang.leveque:04:second-order*1,
   author	= {Dalang, Robert C. and L\'{e}v\^{e}que, Olivier},
   title		= {Second-order linear hyperbolic {SPDE}s driven by isotropic
 		  {G}aussian noise on a sphere},
@@ -13544,21 +13559,6 @@
   mrreviewer	= {Anna Karczewska},
   doi		= {10.1214/aop/1079021472},
   url		= {https://doi.org/10.1214/aop/1079021472}
-}
-
-@InCollection{	  dalang.leveque:04:second-order*1,
-  author	= {Dalang, Robert C. and L\'{e}v\^{e}que, Olivier},
-  title		= {Second-order hyperbolic {S}.{P}.{D}.{E}.'s driven by
-		  boundary noises},
-  booktitle	= {Seminar on {S}tochastic {A}nalysis, {R}andom {F}ields and
-		  {A}pplications {IV}},
-  series	= {Progr. Probab.},
-  volume	= {58},
-  pages		= {83--93},
-  publisher	= {Birkh\"{a}user, Basel},
-  year		= {2004},
-  mrclass	= {60H15 (35L10 35R60)},
-  mrnumber	= {2096282}
 }
 
 @Article{	  dalang.leveque:06:second-order,
@@ -14342,24 +14342,6 @@
 
 @Article{	  dalang:88:on,
   author	= {Dalang, Robert C.},
-  title		= {On infinite perfect graphs and randomized stopping points
-		  on the plane},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {78},
-  year		= {1988},
-  number	= {3},
-  pages		= {357--378},
-  issn		= {0178-8051},
-  mrclass	= {60G40 (05C99)},
-  mrnumber	= {949178},
-  mrreviewer	= {U. Krengel},
-  doi		= {10.1007/BF00334200},
-  url		= {https://doi.org/10.1007/BF00334200}
-}
-
-@Article{	  dalang:88:on*1,
-  author	= {Dalang, Robert C.},
   title		= {On stopping points in the plane that lie on a unique
 		  optional increasing path},
   journal	= {Stochastics},
@@ -14374,6 +14356,24 @@
   mrreviewer	= {Nicholas Frangos},
   doi		= {10.1080/17442508808833517},
   url		= {https://doi.org/10.1080/17442508808833517}
+}
+
+@Article{	  dalang:88:on*1,
+  author	= {Dalang, Robert C.},
+  title		= {On infinite perfect graphs and randomized stopping points
+		  on the plane},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {78},
+  year		= {1988},
+  number	= {3},
+  pages		= {357--378},
+  issn		= {0178-8051},
+  mrclass	= {60G40 (05C99)},
+  mrnumber	= {949178},
+  mrreviewer	= {U. Krengel},
+  doi		= {10.1007/BF00334200},
+  url		= {https://doi.org/10.1007/BF00334200}
 }
 
 @Article{	  dalang:89:optimal,
@@ -14681,6 +14681,23 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -14696,23 +14713,6 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -17960,6 +17960,20 @@
 @Book{		  erdelyi.magnus.ea:81:higher,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
+  title		= {Higher transcendental functions. {V}ol. {III}},
+  note		= {Based on notes left by Harry Bateman, Reprint of the 1955
+		  original},
+  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
+  year		= {1981},
+  pages		= {xvii+292},
+  isbn		= {0-89874-069-X},
+  mrclass	= {33-02 (01A75)},
+  mrnumber	= {698781}
+}
+
+@Book{		  erdelyi.magnus.ea:81:higher*1,
+  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
+		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {I}},
   note		= {Based on notes left by Harry Bateman, With a preface by
 		  Mina Rees, With a foreword by E. C. Watson, Reprint of the
@@ -17972,7 +17986,7 @@
   mrnumber	= {698779}
 }
 
-@Book{		  erdelyi.magnus.ea:81:higher*1,
+@Book{		  erdelyi.magnus.ea:81:higher*2,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {II}},
@@ -17984,20 +17998,6 @@
   isbn		= {0-89874-069-X},
   mrclass	= {33-02 (01A75)},
   mrnumber	= {698780}
-}
-
-@Book{		  erdelyi.magnus.ea:81:higher*2,
-  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
-		  Fritz and Tricomi, Francesco G.},
-  title		= {Higher transcendental functions. {V}ol. {III}},
-  note		= {Based on notes left by Harry Bateman, Reprint of the 1955
-		  original},
-  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
-  year		= {1981},
-  pages		= {xvii+292},
-  isbn		= {0-89874-069-X},
-  mrclass	= {33-02 (01A75)},
-  mrnumber	= {698781}
 }
 
 @Book{		  erdelyi:56:asymptotic,
@@ -21501,24 +21501,6 @@
 @Article{	  giordano.jolis.ea:20:spdes,
   author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
 		  Llu\'{i}s},
-  title		= {S{PDE}s with linear multiplicative fractional noise:
-		  continuity in law with respect to the {H}urst index},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {130},
-  year		= {2020},
-  number	= {12},
-  pages		= {7396--7430},
-  issn		= {0304-4149},
-  mrclass	= {60B10 (60G22 60H07 60H15)},
-  mrnumber	= {4167210},
-  doi		= {10.1016/j.spa.2020.08.001},
-  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
-}
-
-@Article{	  giordano.jolis.ea:20:spdes*1,
-  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
-		  Llu\'{i}s},
   title		= {S{PDE}s with fractional noise in space: continuity in law
 		  with respect to the {H}urst index},
   journal	= {Bernoulli},
@@ -21534,6 +21516,24 @@
   mrreviewer	= {Xiliang Fan},
   doi		= {10.3150/19-BEJ1128},
   url		= {https://doi.org/10.3150/19-BEJ1128}
+}
+
+@Article{	  giordano.jolis.ea:20:spdes*1,
+  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
+		  Llu\'{i}s},
+  title		= {S{PDE}s with linear multiplicative fractional noise:
+		  continuity in law with respect to the {H}urst index},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {130},
+  year		= {2020},
+  number	= {12},
+  pages		= {7396--7430},
+  issn		= {0304-4149},
+  mrclass	= {60B10 (60G22 60H07 60H15)},
+  mrnumber	= {4167210},
+  doi		= {10.1016/j.spa.2020.08.001},
+  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
 }
 
 @Article{	  giunti.gu.ea:19:heat,
@@ -23244,20 +23244,7 @@
   url		= {https://doi.org/10.1088/0951-7715/23/4/008}
 }
 
-@InCollection{	  hairer.manson:10:periodic,
-  author	= {Hairer, Martin and Manson, Charles},
-  title		= {Periodic homogenization with an interface},
-  booktitle	= {Progress in analysis and its applications},
-  pages		= {410--416},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2010},
-  mrclass	= {60J60 (60F05)},
-  mrnumber	= {2766949},
-  doi		= {10.1142/9789814313179\_0053},
-  url		= {https://doi.org/10.1142/9789814313179_0053}
-}
-
-@Article{	  hairer.manson:10:periodic*1,
+@Article{	  hairer.manson:10:periodic,
   author	= {Hairer, Martin and Manson, Charles},
   title		= {Periodic homogenization with an interface: the
 		  one-dimensional case},
@@ -23273,6 +23260,19 @@
   mrreviewer	= {Nicolas Saintier},
   doi		= {10.1016/j.spa.2010.03.016},
   url		= {https://doi.org/10.1016/j.spa.2010.03.016}
+}
+
+@InCollection{	  hairer.manson:10:periodic*1,
+  author	= {Hairer, Martin and Manson, Charles},
+  title		= {Periodic homogenization with an interface},
+  booktitle	= {Progress in analysis and its applications},
+  pages		= {410--416},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2010},
+  mrclass	= {60J60 (60F05)},
+  mrnumber	= {2766949},
+  doi		= {10.1142/9789814313179\_0053},
+  url		= {https://doi.org/10.1142/9789814313179_0053}
 }
 
 @Article{	  hairer.manson:11:periodic,
@@ -24839,6 +24839,15 @@
   mrnumber	= {144363},
   mrreviewer	= {E. H. Lehman},
   url		= {http://links.jstor.org/sici?sici=0162-1459(196303)58:301<13:PIFSOB>2.0.CO;2-D&origin=MSN}
+}
+
+@Article{	  hoessly.wiuf.ea:21:on,
+  title		= {On the sum of chemical reactions},
+  author	= {Linard Hoessly and Carsten Wiuf and Panqiu Xia},
+  year		= {2021},
+  month		= {May},
+  journal	= {preprint arXiv:2105.04353},
+  url		= {http://arXiv.org/abs/2105.04353}
 }
 
 @Article{	  hofmanova.zhang:17:quasilinear,
@@ -27695,25 +27704,6 @@
 @Article{	  huang.le.ea:17:large,
   author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title		= {Large time asymptotics for the parabolic {A}nderson model
-		  driven by spatially correlated noise},
-  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
-  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
-		  et Statistiques},
-  volume	= {53},
-  year		= {2017},
-  number	= {3},
-  pages		= {1305--1340},
-  issn		= {0246-0203},
-  mrclass	= {60G15 (60F10 60H07 60H15 65M75)},
-  mrnumber	= {3689969},
-  mrreviewer	= {Xia Chen},
-  doi		= {10.1214/16-AIHP756},
-  url		= {https://doi.org/10.1214/16-AIHP756}
-}
-
-@Article{	  huang.le.ea:17:large*1,
-  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title		= {Large time asymptotics for the parabolic {A}nderson model
 		  driven by space and time correlated noise},
   journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
   fjournal	= {Stochastic Partial Differential Equations. Analysis and
@@ -27728,6 +27718,25 @@
   mrreviewer	= {Xia Chen},
   doi		= {10.1007/s40072-017-0099-0},
   url		= {https://doi.org/10.1007/s40072-017-0099-0}
+}
+
+@Article{	  huang.le.ea:17:large*1,
+  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title		= {Large time asymptotics for the parabolic {A}nderson model
+		  driven by spatially correlated noise},
+  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
+		  et Statistiques},
+  volume	= {53},
+  year		= {2017},
+  number	= {3},
+  pages		= {1305--1340},
+  issn		= {0246-0203},
+  mrclass	= {60G15 (60F10 60H07 60H15 65M75)},
+  mrnumber	= {3689969},
+  mrreviewer	= {Xia Chen},
+  doi		= {10.1214/16-AIHP756},
+  url		= {https://doi.org/10.1214/16-AIHP756}
 }
 
 @Article{	  huang.le:19:spatial,
@@ -33614,24 +33623,6 @@
 
 @Article{	  malliavin.nualart:93:quasi-sure,
   author	= {Malliavin, Paul and Nualart, David},
-  title		= {Quasi-sure analysis of stochastic flows and {B}anach space
-		  valued smooth functionals on the {W}iener space},
-  journal	= {J. Funct. Anal.},
-  fjournal	= {Journal of Functional Analysis},
-  volume	= {112},
-  year		= {1993},
-  number	= {2},
-  pages		= {287--317},
-  issn		= {0022-1236},
-  mrclass	= {60H05 (46N30)},
-  mrnumber	= {1213140},
-  mrreviewer	= {Vladimir I. Bogachev},
-  doi		= {10.1006/jfan.1993.1034},
-  url		= {https://doi.org/10.1006/jfan.1993.1034}
-}
-
-@Article{	  malliavin.nualart:93:quasi-sure*1,
-  author	= {Malliavin, Paul and Nualart, David},
   title		= {Quasi-sure analysis and {S}tratonovich anticipative
 		  stochastic differential equations},
   journal	= {Probab. Theory Related Fields},
@@ -33646,6 +33637,24 @@
   mrreviewer	= {Daniel Ocone},
   doi		= {10.1007/BF01195882},
   url		= {https://doi.org/10.1007/BF01195882}
+}
+
+@Article{	  malliavin.nualart:93:quasi-sure*1,
+  author	= {Malliavin, Paul and Nualart, David},
+  title		= {Quasi-sure analysis of stochastic flows and {B}anach space
+		  valued smooth functionals on the {W}iener space},
+  journal	= {J. Funct. Anal.},
+  fjournal	= {Journal of Functional Analysis},
+  volume	= {112},
+  year		= {1993},
+  number	= {2},
+  pages		= {287--317},
+  issn		= {0022-1236},
+  mrclass	= {60H05 (46N30)},
+  mrnumber	= {1213140},
+  mrreviewer	= {Vladimir I. Bogachev},
+  doi		= {10.1006/jfan.1993.1034},
+  url		= {https://doi.org/10.1006/jfan.1993.1034}
 }
 
 @Book{		  malliavin.thalmaier:06:stochastic,
@@ -37644,6 +37653,24 @@
 
 @Article{	  nane:06:iterated,
   author	= {Nane, Erkan},
+  title		= {Iterated {B}rownian motion in bounded domains in
+		  {$\mathbb{R}^n$}},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {116},
+  year		= {2006},
+  number	= {6},
+  pages		= {905--916},
+  issn		= {0304-4149},
+  mrclass	= {60J65},
+  mrnumber	= {2254664},
+  mrreviewer	= {Endre Cs\'{a}ki},
+  doi		= {10.1016/j.spa.2005.10.007},
+  url		= {https://doi.org/10.1016/j.spa.2005.10.007}
+}
+
+@Article{	  nane:06:iterated*1,
+  author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion in parabola-shaped domains},
   journal	= {Potential Anal.},
   fjournal	= {Potential Analysis. An International Journal Devoted to
@@ -37659,24 +37686,6 @@
   mrreviewer	= {Endre Cs\'{a}ki},
   doi		= {10.1007/s11118-005-2611-9},
   url		= {https://doi.org/10.1007/s11118-005-2611-9}
-}
-
-@Article{	  nane:06:iterated*1,
-  author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion in bounded domains in
-		  {$\mathbb{R}^n$}},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {116},
-  year		= {2006},
-  number	= {6},
-  pages		= {905--916},
-  issn		= {0304-4149},
-  mrclass	= {60J65},
-  mrnumber	= {2254664},
-  mrreviewer	= {Endre Cs\'{a}ki},
-  doi		= {10.1016/j.spa.2005.10.007},
-  url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
 @Book{		  nane:06:iterated*2,
@@ -38632,6 +38641,23 @@
 
 @Article{	  nourdin.peccati:09:steins,
   author	= {Nourdin, Ivan and Peccati, Giovanni},
+  title		= {Stein's method on {W}iener chaos},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {145},
+  year		= {2009},
+  number	= {1-2},
+  pages		= {75--118},
+  issn		= {0178-8051},
+  mrclass	= {60F05 (60G05 60H07)},
+  mrnumber	= {2520122},
+  mrreviewer	= {Anthony R\'{e}veillac},
+  doi		= {10.1007/s00440-008-0162-x},
+  url		= {https://doi.org/10.1007/s00440-008-0162-x}
+}
+
+@Article{	  nourdin.peccati:09:steins*1,
+  author	= {Nourdin, Ivan and Peccati, Giovanni},
   title		= {Stein's method and exact {B}erry-{E}sseen asymptotics for
 		  functionals of {G}aussian fields},
   journal	= {Ann. Probab.},
@@ -38646,23 +38672,6 @@
   mrreviewer	= {Jean-Pierre Fouque},
   doi		= {10.1214/09-AOP461},
   url		= {https://doi.org/10.1214/09-AOP461}
-}
-
-@Article{	  nourdin.peccati:09:steins*1,
-  author	= {Nourdin, Ivan and Peccati, Giovanni},
-  title		= {Stein's method on {W}iener chaos},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {145},
-  year		= {2009},
-  number	= {1-2},
-  pages		= {75--118},
-  issn		= {0178-8051},
-  mrclass	= {60F05 (60G05 60H07)},
-  mrnumber	= {2520122},
-  mrreviewer	= {Anthony R\'{e}veillac},
-  doi		= {10.1007/s00440-008-0162-x},
-  url		= {https://doi.org/10.1007/s00440-008-0162-x}
 }
 
 @Article{	  nourdin.peccati:10:cumulants,
@@ -40238,25 +40247,7 @@
   url		= {https://doi.org/10.1080/17442508808833542}
 }
 
-@InCollection{	  nualart.ustunel.ea:90:some,
-  author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
-  title		= {Some remarks on independence and conditioning on {W}iener
-		  space},
-  booktitle	= {Stochastic analysis and related topics, {II} ({S}ilivri,
-		  1988)},
-  series	= {Lecture Notes in Math.},
-  volume	= {1444},
-  pages		= {122--127},
-  publisher	= {Springer, Berlin},
-  year		= {1990},
-  mrclass	= {60H99 (60G15)},
-  mrnumber	= {1078845},
-  mrreviewer	= {Denis R. Bell},
-  doi		= {10.1007/BFb0083612},
-  url		= {https://doi.org/10.1007/BFb0083612}
-}
-
-@Article{	  nualart.ustunel.ea:90:some*1,
+@Article{	  nualart.ustunel.ea:90:some,
   author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
   title		= {Some relations among classes of {$\sigma$}-fields on
 		  {W}iener space},
@@ -40272,6 +40263,24 @@
   mrreviewer	= {Ana Bela Cruzeiro},
   doi		= {10.1007/BF01377633},
   url		= {https://doi.org/10.1007/BF01377633}
+}
+
+@InCollection{	  nualart.ustunel.ea:90:some*1,
+  author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
+  title		= {Some remarks on independence and conditioning on {W}iener
+		  space},
+  booktitle	= {Stochastic analysis and related topics, {II} ({S}ilivri,
+		  1988)},
+  series	= {Lecture Notes in Math.},
+  volume	= {1444},
+  pages		= {122--127},
+  publisher	= {Springer, Berlin},
+  year		= {1990},
+  mrclass	= {60H99 (60G15)},
+  mrnumber	= {1078845},
+  mrreviewer	= {Denis R. Bell},
+  doi		= {10.1007/BFb0083612},
+  url		= {https://doi.org/10.1007/BFb0083612}
 }
 
 @Article{	  nualart.ustunel:89:extension,
@@ -41158,19 +41167,6 @@
 
 @InProceedings{	  nualart:77:on,
   author	= {Nualart, David},
-  title		= {On the convergence of martingales},
-  booktitle	= {Proceedings of the {F}irst {S}panish-{P}ortuguese
-		  {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
-  pages		= {638--646},
-  publisher	= {Consejo Sup. Inv. Cient., Madrid},
-  year		= {1977},
-  mrclass	= {60G42},
-  mrnumber	= {581115},
-  mrreviewer	= {Dominique L\'{e}pingle}
-}
-
-@InProceedings{	  nualart:77:on*1,
-  author	= {Nualart, David},
   title		= {On the order convergence of stochastic processes},
   booktitle	= {Proceedings of the {F}irst {S}panish-{P}ortuguese
 		  {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
@@ -41180,6 +41176,19 @@
   mrclass	= {60G17 (60G07)},
   mrnumber	= {581116},
   mrreviewer	= {Evarist Gin\'{e}}
+}
+
+@InProceedings{	  nualart:77:on*1,
+  author	= {Nualart, David},
+  title		= {On the convergence of martingales},
+  booktitle	= {Proceedings of the {F}irst {S}panish-{P}ortuguese
+		  {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
+  pages		= {638--646},
+  publisher	= {Consejo Sup. Inv. Cient., Madrid},
+  year		= {1977},
+  mrclass	= {60G42},
+  mrnumber	= {581115},
+  mrreviewer	= {Dominique L\'{e}pingle}
 }
 
 @InCollection{	  nualart:79:decomposition,
@@ -41933,6 +41942,22 @@
 
 @Article{	  ondrejat:10:stochastic,
   author	= {Ondrej\'{a}t, Martin},
+  title		= {Stochastic nonlinear wave equations in local {S}obolev
+		  spaces},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {15},
+  year		= {2010},
+  pages		= {no. 33, 1041--1091},
+  mrclass	= {60H15},
+  mrnumber	= {2659757},
+  mrreviewer	= {Chunrong Feng},
+  doi		= {10.1214/EJP.v15-789},
+  url		= {https://doi.org/10.1214/EJP.v15-789}
+}
+
+@Article{	  ondrejat:10:stochastic*1,
+  author	= {Ondrej\'{a}t, Martin},
   title		= {Stochastic wave equation with critical nonlinearities:
 		  temporal regularity and uniqueness},
   journal	= {J. Differential Equations},
@@ -41946,22 +41971,6 @@
   mrnumber	= {2593599},
   doi		= {10.1016/j.jde.2009.12.010},
   url		= {https://doi.org/10.1016/j.jde.2009.12.010}
-}
-
-@Article{	  ondrejat:10:stochastic*1,
-  author	= {Ondrej\'{a}t, Martin},
-  title		= {Stochastic nonlinear wave equations in local {S}obolev
-		  spaces},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {15},
-  year		= {2010},
-  pages		= {no. 33, 1041--1091},
-  mrclass	= {60H15},
-  mrnumber	= {2659757},
-  mrreviewer	= {Chunrong Feng},
-  doi		= {10.1214/EJP.v15-789},
-  url		= {https://doi.org/10.1214/EJP.v15-789}
 }
 
 @Article{	  ono:97:global,
@@ -44912,6 +44921,22 @@
 
 @Article{	  rovira.tindel:00:sharp,
   author	= {Rovira, Carles and Tindel, Samy},
+  title		= {Sharp {L}aplace asymptotics for a parabolic {SPDE}},
+  journal	= {Stochastics Stochastics Rep.},
+  fjournal	= {Stochastics and Stochastics Reports},
+  volume	= {69},
+  year		= {2000},
+  number	= {1-2},
+  pages		= {11--30},
+  issn		= {1045-1129},
+  mrclass	= {60F10 (60H15)},
+  mrnumber	= {1751716},
+  doi		= {10.1080/17442500008834230},
+  url		= {https://doi.org/10.1080/17442500008834230}
+}
+
+@Article{	  rovira.tindel:00:sharp*1,
+  author	= {Rovira, Carles and Tindel, Samy},
   title		= {Sharp large deviation estimates for a certain class of
 		  sets on the {W}iener space},
   journal	= {Bull. Sci. Math.},
@@ -44928,23 +44953,22 @@
   url		= {https://doi.org/10.1016/S0007-4497(00)01062-9}
 }
 
-@Article{	  rovira.tindel:00:sharp*1,
-  author	= {Rovira, Carles and Tindel, Samy},
-  title		= {Sharp {L}aplace asymptotics for a parabolic {SPDE}},
-  journal	= {Stochastics Stochastics Rep.},
-  fjournal	= {Stochastics and Stochastics Reports},
-  volume	= {69},
-  year		= {2000},
-  number	= {1-2},
-  pages		= {11--30},
-  issn		= {1045-1129},
-  mrclass	= {60F10 (60H15)},
-  mrnumber	= {1751716},
-  doi		= {10.1080/17442500008834230},
-  url		= {https://doi.org/10.1080/17442500008834230}
+@InCollection{	  rovira.tindel:01:sharp,
+  author	= {Rovira, C. and Tindel, S.},
+  title		= {Sharp {L}aplace asymptotics for a hyperbolic {SPDE}},
+  booktitle	= {Stochastic analysis and related topics, {VII} ({K}usadasi,
+		  1998)},
+  series	= {Progr. Probab.},
+  volume	= {48},
+  pages		= {225--244},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {2001},
+  mrclass	= {60H15 (60F10)},
+  mrnumber	= {1915457},
+  mrreviewer	= {Giambattista Giacomin}
 }
 
-@Article{	  rovira.tindel:01:sharp,
+@Article{	  rovira.tindel:01:sharp*1,
   author	= {Rovira, Carles and Tindel, Samy},
   title		= {Sharp large deviation estimates for the stochastic heat
 		  equation},
@@ -44962,21 +44986,6 @@
   mrreviewer	= {Zhongmin Qian},
   doi		= {10.1023/A:1011286304117},
   url		= {https://doi.org/10.1023/A:1011286304117}
-}
-
-@InCollection{	  rovira.tindel:01:sharp*1,
-  author	= {Rovira, C. and Tindel, S.},
-  title		= {Sharp {L}aplace asymptotics for a hyperbolic {SPDE}},
-  booktitle	= {Stochastic analysis and related topics, {VII} ({K}usadasi,
-		  1998)},
-  series	= {Progr. Probab.},
-  volume	= {48},
-  pages		= {225--244},
-  publisher	= {Birkh\"{a}user Boston, Boston, MA},
-  year		= {2001},
-  mrclass	= {60H15 (60F10)},
-  mrnumber	= {1915457},
-  mrreviewer	= {Giambattista Giacomin}
 }
 
 @Article{	  rovira.tindel:05:on,
@@ -46853,7 +46862,21 @@
   url		= {https://doi.org/10.1007/s10955-011-0155-5}
 }
 
-@InCollection{	  sierocinski.zabczyk:89:on,
+@Article{	  sierocinski.zabczyk:89:on,
+  author	= {Sieroci\'{n}ski, Andrzej and Zabczyk, Jerzy},
+  title		= {On a packing problem},
+  journal	= {Bull. Polish Acad. Sci. Math.},
+  fjournal	= {Bulletin of the Polish Academy of Sciences. Mathematics},
+  volume	= {37},
+  year		= {1989},
+  number	= {1-6},
+  pages		= {305--313 (1990)},
+  issn		= {0239-7269},
+  mrclass	= {90C39 (90B99)},
+  mrnumber	= {1101484}
+}
+
+@InCollection{	  sierocinski.zabczyk:89:on*1,
   author	= {Sieroci\'{n}ski, Andrzej and Zabczyk, Jerzy},
   title		= {On a packing problem},
   booktitle	= {Stochastic systems and optimization ({W}arsaw, 1988)},
@@ -46866,20 +46889,6 @@
   mrnumber	= {1180793},
   doi		= {10.1007/BFb0002695},
   url		= {https://doi.org/10.1007/BFb0002695}
-}
-
-@Article{	  sierocinski.zabczyk:89:on*1,
-  author	= {Sieroci\'{n}ski, Andrzej and Zabczyk, Jerzy},
-  title		= {On a packing problem},
-  journal	= {Bull. Polish Acad. Sci. Math.},
-  fjournal	= {Bulletin of the Polish Academy of Sciences. Mathematics},
-  volume	= {37},
-  year		= {1989},
-  number	= {1-6},
-  pages		= {305--313 (1990)},
-  issn		= {0239-7269},
-  mrclass	= {90C39 (90B99)},
-  mrnumber	= {1101484}
 }
 
 @Article{	  silverstein:67:new,
@@ -48772,23 +48781,6 @@
 
 @Article{	  tracy.widom:09:on,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On {ASEP} with step {B}ernoulli initial condition},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {137},
-  year		= {2009},
-  number	= {5-6},
-  pages		= {825--838},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22)},
-  mrnumber	= {2570751},
-  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
-  doi		= {10.1007/s10955-009-9867-1},
-  url		= {https://doi.org/10.1007/s10955-009-9867-1}
-}
-
-@Article{	  tracy.widom:09:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the distribution of a second-class particle in the
 		  asymmetric simple exclusion process},
   journal	= {J. Phys. A},
@@ -48803,6 +48795,23 @@
   mrreviewer	= {Pablo A. Ferrari},
   doi		= {10.1088/1751-8113/42/42/425002},
   url		= {https://doi.org/10.1088/1751-8113/42/42/425002}
+}
+
+@Article{	  tracy.widom:09:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On {ASEP} with step {B}ernoulli initial condition},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {137},
+  year		= {2009},
+  number	= {5-6},
+  pages		= {825--838},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22)},
+  mrnumber	= {2570751},
+  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
+  doi		= {10.1007/s10955-009-9867-1},
+  url		= {https://doi.org/10.1007/s10955-009-9867-1}
 }
 
 @Article{	  tracy.widom:09:total,
@@ -48825,23 +48834,6 @@
 
 @Article{	  tracy.widom:10:formulas,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {Formulas for joint probabilities for the asymmetric simple
-		  exclusion process},
-  journal	= {J. Math. Phys.},
-  fjournal	= {Journal of Mathematical Physics},
-  volume	= {51},
-  year		= {2010},
-  number	= {6},
-  pages		= {063302, 10},
-  issn		= {0022-2488},
-  mrclass	= {82C22},
-  mrnumber	= {2675194},
-  doi		= {10.1063/1.3431977},
-  url		= {https://doi.org/10.1063/1.3431977}
-}
-
-@Article{	  tracy.widom:10:formulas*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {Formulas for {ASEP} with two-sided {B}ernoulli initial
 		  condition},
   journal	= {J. Stat. Phys.},
@@ -48856,6 +48848,23 @@
   mrreviewer	= {Dimitri Petritis},
   doi		= {10.1007/s10955-010-0013-x},
   url		= {https://doi.org/10.1007/s10955-010-0013-x}
+}
+
+@Article{	  tracy.widom:10:formulas*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {Formulas for joint probabilities for the asymmetric simple
+		  exclusion process},
+  journal	= {J. Math. Phys.},
+  fjournal	= {Journal of Mathematical Physics},
+  volume	= {51},
+  year		= {2010},
+  number	= {6},
+  pages		= {063302, 10},
+  issn		= {0022-2488},
+  mrclass	= {82C22},
+  mrnumber	= {2675194},
+  doi		= {10.1063/1.3431977},
+  url		= {https://doi.org/10.1063/1.3431977}
 }
 
 @Article{	  tracy.widom:11:erratum,
@@ -48969,24 +48978,6 @@
 
 @Article{	  tracy.widom:13:on,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the asymmetric simple exclusion process with multiple
-		  species},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {150},
-  year		= {2013},
-  number	= {3},
-  pages		= {457--470},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22 82C44)},
-  mrnumber	= {3024137},
-  mrreviewer	= {Anja Vo\ss -B\"{o}hme},
-  doi		= {10.1007/s10955-012-0531-9},
-  url		= {https://doi.org/10.1007/s10955-012-0531-9}
-}
-
-@Article{	  tracy.widom:13:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the diagonal susceptibility of the two-dimensional
 		  {I}sing model},
   journal	= {J. Math. Phys.},
@@ -49001,6 +48992,24 @@
   mrreviewer	= {Anja Vo\ss -B\"{o}hme},
   doi		= {10.1063/1.4836779},
   url		= {https://doi.org/10.1063/1.4836779}
+}
+
+@Article{	  tracy.widom:13:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the asymmetric simple exclusion process with multiple
+		  species},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {150},
+  year		= {2013},
+  number	= {3},
+  pages		= {457--470},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22 82C44)},
+  mrnumber	= {3024137},
+  mrreviewer	= {Anja Vo\ss -B\"{o}hme},
+  doi		= {10.1007/s10955-012-0531-9},
+  url		= {https://doi.org/10.1007/s10955-012-0531-9}
 }
 
 @Article{	  tracy.widom:14:on,
@@ -49463,21 +49472,6 @@
 
 @Article{	  tracy:88:universality,
   author	= {Tracy, Craig A.},
-  title		= {Universality classes of some aperiodic {I}sing models},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and General},
-  volume	= {21},
-  year		= {1988},
-  number	= {11},
-  pages		= {L603--L605},
-  issn		= {0305-4470},
-  mrclass	= {82A68 (82-04 82A25)},
-  mrnumber	= {953188},
-  url		= {http://stacks.iop.org/0305-4470/21/L603}
-}
-
-@Article{	  tracy:88:universality*1,
-  author	= {Tracy, Craig A.},
   title		= {Universality class of a {F}ibonacci {I}sing model},
   journal	= {J. Statist. Phys.},
   fjournal	= {Journal of Statistical Physics},
@@ -49491,6 +49485,21 @@
   mrreviewer	= {Peter J. Forrester},
   doi		= {10.1007/BF01028467},
   url		= {https://doi.org/10.1007/BF01028467}
+}
+
+@Article{	  tracy:88:universality*1,
+  author	= {Tracy, Craig A.},
+  title		= {Universality classes of some aperiodic {I}sing models},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and General},
+  volume	= {21},
+  year		= {1988},
+  number	= {11},
+  pages		= {L603--L605},
+  issn		= {0305-4470},
+  mrclass	= {82A68 (82-04 82A25)},
+  mrnumber	= {953188},
+  url		= {http://stacks.iop.org/0305-4470/21/L603}
 }
 
 @InCollection{	  tracy:89:introduction,
@@ -49559,6 +49568,24 @@
   mrnumber	= {1137066},
   mrreviewer	= {Edward P. Osipov},
   url		= {http://projecteuclid.org/euclid.cmp/1104248587}
+}
+
+@Article{	  tribe:96:travelling,
+  author	= {Tribe, Roger},
+  title		= {A travelling wave solution to the {K}olmogorov equation
+		  with noise},
+  journal	= {Stochastics Stochastics Rep.},
+  fjournal	= {Stochastics and Stochastics Reports},
+  volume	= {56},
+  year		= {1996},
+  number	= {3-4},
+  pages		= {317--340},
+  issn		= {1045-1129},
+  mrclass	= {60H15 (35K55 35R60)},
+  mrnumber	= {1396765},
+  mrreviewer	= {Isamu D\^{o}ku},
+  doi		= {10.1080/17442509608834047},
+  url		= {https://doi.org/10.1080/17442509608834047}
 }
 
 @Book{		  tricomi:85:integral,
@@ -51593,7 +51620,21 @@
   url		= {https://doi.org/10.1007/BFb0002685}
 }
 
-@Article{	  zabczyk:89:some,
+@InProceedings{	  zabczyk:89:some,
+  author	= {Zabczyk, Jerzy},
+  title		= {Some interplays between control theory and stochastic
+		  systems},
+  booktitle	= {Proceedings of the 28th {IEEE} {C}onference on {D}ecision
+		  and {C}ontrol, {V}ol. 1--3 ({T}ampa, {FL}, 1989)},
+  pages		= {229--231},
+  publisher	= {IEEE, New York},
+  year		= {1989},
+  mrclass	= {93E03 (93C25)},
+  mrnumber	= {1038935},
+  mrreviewer	= {Akira Ichikawa}
+}
+
+@Article{	  zabczyk:89:some*1,
   author	= {Zabczyk, J.},
   title		= {Some comments on stabilizability},
   journal	= {Appl. Math. Optim.},
@@ -51608,20 +51649,6 @@
   mrreviewer	= {Enrique Zuazua},
   doi		= {10.1007/BF01448189},
   url		= {https://doi.org/10.1007/BF01448189}
-}
-
-@InProceedings{	  zabczyk:89:some*1,
-  author	= {Zabczyk, Jerzy},
-  title		= {Some interplays between control theory and stochastic
-		  systems},
-  booktitle	= {Proceedings of the 28th {IEEE} {C}onference on {D}ecision
-		  and {C}ontrol, {V}ol. 1--3 ({T}ampa, {FL}, 1989)},
-  pages		= {229--231},
-  publisher	= {IEEE, New York},
-  year		= {1989},
-  mrclass	= {93E03 (93C25)},
-  mrnumber	= {1038935},
-  mrreviewer	= {Akira Ichikawa}
 }
 
 @InCollection{	  zabczyk:89:symmetric,
