Add panqiu's paper published on Euro. Journal of Applied Math.

--- a/All.bib
+++ b/All.bib
@@ -6246,23 +6246,6 @@
 @Article{	  borodin.corwin.ea:15:spectral,
   author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
 		  Sasamoto, Tomohiro},
-  title		= {Spectral theory for the {$q$}-{B}oson particle system},
-  journal	= {Compos. Math.},
-  fjournal	= {Compositio Mathematica},
-  volume	= {151},
-  year		= {2015},
-  number	= {1},
-  pages		= {1--67},
-  issn		= {0010-437X},
-  mrclass	= {82B23 (05E05)},
-  mrnumber	= {3305308},
-  doi		= {10.1112/S0010437X14007532},
-  url		= {https://doi.org/10.1112/S0010437X14007532}
-}
-
-@Article{	  borodin.corwin.ea:15:spectral*1,
-  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
-		  Sasamoto, Tomohiro},
   title		= {Spectral theory for interacting particle systems solvable
 		  by coordinate {B}ethe ansatz},
   journal	= {Comm. Math. Phys.},
@@ -6276,6 +6259,23 @@
   mrnumber	= {3385995},
   doi		= {10.1007/s00220-015-2424-7},
   url		= {https://doi.org/10.1007/s00220-015-2424-7}
+}
+
+@Article{	  borodin.corwin.ea:15:spectral*1,
+  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
+		  Sasamoto, Tomohiro},
+  title		= {Spectral theory for the {$q$}-{B}oson particle system},
+  journal	= {Compos. Math.},
+  fjournal	= {Compositio Mathematica},
+  volume	= {151},
+  year		= {2015},
+  number	= {1},
+  pages		= {1--67},
+  issn		= {0010-437X},
+  mrclass	= {82B23 (05E05)},
+  mrnumber	= {3305308},
+  doi		= {10.1112/S0010437X14007532},
+  url		= {https://doi.org/10.1112/S0010437X14007532}
 }
 
 @Article{	  borodin.corwin.ea:16:observables,
@@ -14681,23 +14681,6 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -14713,6 +14696,23 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -24850,6 +24850,16 @@
   url		= {http://arXiv.org/abs/2105.04353}
 }
 
+@Article{	  hoessly.wiuf.ea:22:on,
+  title		= {On the sum of chemical reactions},
+  doi		= {10.1017/S0956792522000146},
+  journal	= {European Journal of Applied Mathematics},
+  publisher	= {Cambridge University Press},
+  author	= {HOESSLY, LINARD and WIUF, CARSTEN and XIA, PANQIU},
+  year		= {2022},
+  pages		= {1–23}
+}
+
 @Article{	  hofmanova.zhang:17:quasilinear,
   author	= {Hofmanov\'{a}, Martina and Zhang, Tusheng},
   title		= {Quasilinear parabolic stochastic partial differential
@@ -27704,25 +27714,6 @@
 @Article{	  huang.le.ea:17:large,
   author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title		= {Large time asymptotics for the parabolic {A}nderson model
-		  driven by space and time correlated noise},
-  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
-  fjournal	= {Stochastic Partial Differential Equations. Analysis and
-		  Computations},
-  volume	= {5},
-  year		= {2017},
-  number	= {4},
-  pages		= {614--651},
-  issn		= {2194-0401},
-  mrclass	= {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
-  mrnumber	= {3736656},
-  mrreviewer	= {Xia Chen},
-  doi		= {10.1007/s40072-017-0099-0},
-  url		= {https://doi.org/10.1007/s40072-017-0099-0}
-}
-
-@Article{	  huang.le.ea:17:large*1,
-  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title		= {Large time asymptotics for the parabolic {A}nderson model
 		  driven by spatially correlated noise},
   journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
   fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
@@ -27737,6 +27728,25 @@
   mrreviewer	= {Xia Chen},
   doi		= {10.1214/16-AIHP756},
   url		= {https://doi.org/10.1214/16-AIHP756}
+}
+
+@Article{	  huang.le.ea:17:large*1,
+  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title		= {Large time asymptotics for the parabolic {A}nderson model
+		  driven by space and time correlated noise},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {5},
+  year		= {2017},
+  number	= {4},
+  pages		= {614--651},
+  issn		= {2194-0401},
+  mrclass	= {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
+  mrnumber	= {3736656},
+  mrreviewer	= {Xia Chen},
+  doi		= {10.1007/s40072-017-0099-0},
+  url		= {https://doi.org/10.1007/s40072-017-0099-0}
 }
 
 @Article{	  huang.le:19:spatial,
@@ -38641,23 +38651,6 @@
 
 @Article{	  nourdin.peccati:09:steins,
   author	= {Nourdin, Ivan and Peccati, Giovanni},
-  title		= {Stein's method on {W}iener chaos},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {145},
-  year		= {2009},
-  number	= {1-2},
-  pages		= {75--118},
-  issn		= {0178-8051},
-  mrclass	= {60F05 (60G05 60H07)},
-  mrnumber	= {2520122},
-  mrreviewer	= {Anthony R\'{e}veillac},
-  doi		= {10.1007/s00440-008-0162-x},
-  url		= {https://doi.org/10.1007/s00440-008-0162-x}
-}
-
-@Article{	  nourdin.peccati:09:steins*1,
-  author	= {Nourdin, Ivan and Peccati, Giovanni},
   title		= {Stein's method and exact {B}erry-{E}sseen asymptotics for
 		  functionals of {G}aussian fields},
   journal	= {Ann. Probab.},
@@ -38672,6 +38665,23 @@
   mrreviewer	= {Jean-Pierre Fouque},
   doi		= {10.1214/09-AOP461},
   url		= {https://doi.org/10.1214/09-AOP461}
+}
+
+@Article{	  nourdin.peccati:09:steins*1,
+  author	= {Nourdin, Ivan and Peccati, Giovanni},
+  title		= {Stein's method on {W}iener chaos},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {145},
+  year		= {2009},
+  number	= {1-2},
+  pages		= {75--118},
+  issn		= {0178-8051},
+  mrclass	= {60F05 (60G05 60H07)},
+  mrnumber	= {2520122},
+  mrreviewer	= {Anthony R\'{e}veillac},
+  doi		= {10.1007/s00440-008-0162-x},
+  url		= {https://doi.org/10.1007/s00440-008-0162-x}
 }
 
 @Article{	  nourdin.peccati:10:cumulants,
@@ -39895,21 +39905,6 @@
 
 @Article{	  nualart.sanz:85:malliavin,
   author	= {Nualart, D. and Sanz, M.},
-  title		= {Malliavin calculus for two-parameter processes},
-  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
-		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number	= {3},
-  year		= {1985},
-  pages		= {73--86},
-  issn		= {0246-1501},
-  mrclass	= {60H15 (60G60 60H07)},
-  mrnumber	= {790724},
-  mrreviewer	= {M. Zakai}
-}
-
-@Article{	  nualart.sanz:85:malliavin*1,
-  author	= {Nualart, D. and Sanz, M.},
   title		= {Malliavin calculus for two-parameter {W}iener
 		  functionals},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -39925,6 +39920,21 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00531868},
   url		= {https://doi.org/10.1007/BF00531868}
+}
+
+@Article{	  nualart.sanz:85:malliavin*1,
+  author	= {Nualart, D. and Sanz, M.},
+  title		= {Malliavin calculus for two-parameter processes},
+  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
+		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number	= {3},
+  year		= {1985},
+  pages		= {73--86},
+  issn		= {0246-1501},
+  mrclass	= {60H15 (60G60 60H07)},
+  mrnumber	= {790724},
+  mrreviewer	= {M. Zakai}
 }
 
 @Article{	  nualart.sanz:89:stochastic,
@@ -48781,6 +48791,23 @@
 
 @Article{	  tracy.widom:09:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On {ASEP} with step {B}ernoulli initial condition},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {137},
+  year		= {2009},
+  number	= {5-6},
+  pages		= {825--838},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22)},
+  mrnumber	= {2570751},
+  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
+  doi		= {10.1007/s10955-009-9867-1},
+  url		= {https://doi.org/10.1007/s10955-009-9867-1}
+}
+
+@Article{	  tracy.widom:09:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the distribution of a second-class particle in the
 		  asymmetric simple exclusion process},
   journal	= {J. Phys. A},
@@ -48795,23 +48822,6 @@
   mrreviewer	= {Pablo A. Ferrari},
   doi		= {10.1088/1751-8113/42/42/425002},
   url		= {https://doi.org/10.1088/1751-8113/42/42/425002}
-}
-
-@Article{	  tracy.widom:09:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On {ASEP} with step {B}ernoulli initial condition},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {137},
-  year		= {2009},
-  number	= {5-6},
-  pages		= {825--838},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22)},
-  mrnumber	= {2570751},
-  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
-  doi		= {10.1007/s10955-009-9867-1},
-  url		= {https://doi.org/10.1007/s10955-009-9867-1}
 }
 
 @Article{	  tracy.widom:09:total,
